sm8350-common: Support doze single tap sensor
- Ambient display triggers were added in commit [1].
- Single tap is the only gesture that is detected other than double tap;
- Hence let's implement a modernized single tap sensor in accordance to the changes made.
- Set proper permissions to single tap sensor nodes.
- Allocate a context to single_tap_pressed node.
- Allow hal_sensors_default to have read perms on sysfs_touchpanel.

Change-Id: I3483904e2db8bbca6753eaabf6f84eb034bff4c2
Signed-off-by: Cyber Knight <cyberknight755@gmail.com>
Signed-off-by: ralph950412 <ralph950412@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -114,6 +114,10 @@ on boot
     # Create persist for camera calibration data
     mkdir /mnt/vendor/persist/camera 0755 system cameraserver
 
+    # Single Tap Sensor
+    chown system system /sys/devices/platform/soc/a8c000.spi/spi_master/spi1/spi1.0/single_tap_pressed
+    chmod 0660 /sys/devices/platform/soc/a8c000.spi/spi_master/spi1/spi1.0/single_tap_pressed
+
     # Enable qcrild and data services
     enable vendor.qcrild
     enable vendor.qcrild2
