--- a/rootdir/etc/init.lahaina.perf.rc
+++ b/rootdir/etc/init.lahaina.perf.rc
@@ -1,4 +1,4 @@
-# Copyright (C) 2021 Paranoid Android
+# Copyright (C) 2023 Paranoid Android
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -84,6 +84,15 @@ on property:vendor.post_boot.parsed=1
     # IRQ 222: kgsl_3d0_irq
     write /proc/irq/70/smp_affinity_list 2
     write /proc/irq/222/smp_affinity_list 1
+
+# Currently only enabled for Lahaina (not shima/yupik), which matches Qualcomm.
+on property:persist.vendor.power.profile=performance && property:vendor.post_boot.parsed=1 && property:ro.boot.product.vendor.sku=lahaina
+    write /proc/sys/kernel/sched_busy_hysteresis_enable_cpus 20
+    write /proc/sys/kernel/sched_ravg_window_nr_ticks 2
+    write /sys/module/msm_performance/parameters/cpu_min_freq "0:800 4:1555 7:1670"
+    write /proc/sys/kernel/sched_busy_hysteresis_enable_cpus 255
+    write /sys/module/lpm_levels/parameters/bias_hyst 99
+    write /proc/sys/kernel/sched_prefer_spread 3
 
 on property:sys.boot_completed=1
     # Runtime fs tuning
