--- a/rootdir/etc/init.lahaina.perf.rc
+++ b/rootdir/etc/init.lahaina.perf.rc
@@ -78,5 +78,7 @@ on property:vendor.post_boot.parsed=1
     write /dev/cpuctl/rt/cpu.shares 20480
     write /dev/cpuctl/top-app/cpu.shares 20480
 
-    # Setup foreground cpuset for display composer.
+    # CPUSets
+    write /dev/cpuset/background/cpus 0-1
+    write /dev/cpuset/system-background/cpus 0-2
     write /dev/cpuset/foreground/cpus 0-6
